[gd_scene load_steps=28 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://scripts/meteor.gd" type="Script" id=3]
[ext_resource path="res://assets/meteor.png" type="Texture" id=4]
[ext_resource path="res://scripts/player.gd" type="Script" id=5]
[ext_resource path="res://assets/player.png" type="Texture" id=6]
[ext_resource path="res://assets/tower-enemy.png" type="Texture" id=7]
[ext_resource path="res://assets/brick-enemy.png" type="Texture" id=8]
[ext_resource path="res://scripts/Timer.gd" type="Script" id=9]
[ext_resource path="res://ConcertOne-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/timer.png" type="Texture" id=11]
[ext_resource path="res://assets/pause_button_normal.png" type="Texture" id=12]
[ext_resource path="res://assets/pause_button_pressed.png" type="Texture" id=13]
[ext_resource path="res://assets/enemies_bar_under.png" type="Texture" id=14]
[ext_resource path="res://assets/enemies_bar.png" type="Texture" id=15]
[ext_resource path="res://scripts/Walls.gd" type="Script" id=16]
[ext_resource path="res://BrickEnemy.gd" type="Script" id=17]

[sub_resource type="Environment" id=1]
background_mode = 4

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="Animation" id=3]
resource_name = "New Anim"
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5.03754, -0.822144 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 460.453, 445.841 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 28.7321 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12.2997, 10.4398 )

[sub_resource type="Animation" id=6]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -5.79246, -12.8109, -3.79448, 1.57893, 1.57893, 6.19035, 10.7986, 3.32328, -0.465184, 0.0 ]
}

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 10 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 40.2581, 10 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 31.3156, 19.3159 )

[node name="Root" type="WorldEnvironment"]
environment = SubResource( 1 )
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 350.02, 228.207 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
offset = Vector2( -90.9553, 87.4641 )

[node name="Ball" type="KinematicBody2D" parent="." groups=[
"balls",
]]
position = Vector2( 346.859, 35.56 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ball"]
position = Vector2( 5.66681, -0.89917 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2( 5.03754, -0.822144 )
scale = Vector2( 2.5, 2.5 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ball"]
"anims/New Anim" = SubResource( 3 )

[node name="Player" type="KinematicBody2D" parent="." groups=[
"players",
]]
position = Vector2( 316.42, 502.674 )
scale = Vector2( 1.68342, 0.251014 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( -1.396, 0.942017 )
scale = Vector2( 0.196029, 1.31467 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( -0.894669, 31.9491 )
scale = Vector2( 2.96493, 2.16844 )
shape = SubResource( 4 )

[node name="TowerEnemy" type="StaticBody2D" parent="." groups=[
"enemies",
]]
position = Vector2( 284.955, 242.089 )
rotation = 0.00910527
scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Image" type="Sprite" parent="TowerEnemy"]
position = Vector2( -7.51563, 8.40467 )
texture = ExtResource( 7 )

[node name="Horizontal" type="CollisionShape2D" parent="TowerEnemy"]
position = Vector2( -7.95093, 10.5495 )
rotation = -7.0159e-10
scale = Vector2( 5.30978, 4.05799 )
shape = SubResource( 5 )

[node name="Vertical" type="CollisionShape2D" parent="TowerEnemy"]
position = Vector2( 26.674, 8.90884 )
scale = Vector2( 1.18546, 10.4725 )
shape = SubResource( 5 )

[node name="BrickEnemy" type="Sprite" parent="."]
position = Vector2( 148.953, 130.941 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
script = ExtResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BrickEnemy"]
anims/idle = SubResource( 6 )

[node name="AnotherBrickEnemy" type="Sprite" parent="."]
position = Vector2( 430.476, 129.353 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="TimeCounter" type="Node" parent="."]
script = ExtResource( 9 )

[node name="TimerCounter" type="Label" parent="TimeCounter"]
margin_left = 518.631
margin_top = 12.0347
margin_right = 607.631
margin_bottom = 44.0347
size_flags_stretch_ratio = 0.5
custom_fonts/font = SubResource( 7 )
text = "02:15"

[node name="TimerIcon" type="Sprite" parent="TimeCounter"]
position = Vector2( 498.241, 33.0907 )
scale = Vector2( 0.108448, 0.108448 )
texture = ExtResource( 11 )

[node name="UI" type="Node" parent="."]

[node name="Results" type="Label" parent="UI"]
visible = false
margin_left = 3.0
margin_top = 1.0
margin_right = 603.0
margin_bottom = 541.0
custom_fonts/font = SubResource( 8 )
text = "%TODO%"
align = 1
valign = 1
autowrap = true

[node name="PauseButton" type="TextureButton" parent="UI"]
margin_left = 14.0
margin_top = 13.0
margin_right = 59.0
margin_bottom = 59.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemiesHealthBar" type="TextureProgress" parent="UI"]
margin_left = 66.6486
margin_top = 23.8889
margin_right = 266.649
margin_bottom = 74.8889
rect_scale = Vector2( 0.5, 0.5 )
value = 10.0
texture_under = ExtResource( 14 )
texture_progress = ExtResource( 15 )

[node name="Walls" type="Node" parent="."]
script = ExtResource( 16 )

[node name="LeftWall" type="StaticBody2D" parent="Walls" groups=[
"platforms",
]]
position = Vector2( -34.155, 272.149 )
scale = Vector2( 1, 8.43857 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
position = Vector2( -3.58945, -0.356583 )
scale = Vector2( 1, 3.24611 )
shape = SubResource( 9 )

[node name="RightWall" type="StaticBody2D" parent="Walls" groups=[
"platforms",
]]
position = Vector2( 642.335, 270.867 )
scale = Vector2( 0.912356, 8.43857 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
position = Vector2( -4.42119, 0.338242 )
scale = Vector2( 1, 3.2013 )
shape = SubResource( 9 )

[node name="TopWall" type="StaticBody2D" parent="Walls" groups=[
"platforms",
]]
position = Vector2( 751.022, 50.5547 )
scale = Vector2( 0.953375, 1.46665 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
position = Vector2( -480.353, -57.241 )
scale = Vector2( 14.2197, 2.7074 )
shape = SubResource( 9 )

[node name="OutOfBoundsWall" type="Area2D" parent="Walls"]
position = Vector2( 307.834, 564.565 )
scale = Vector2( 12.6726, -1.21421 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/OutOfBoundsWall"]
shape = SubResource( 10 )
[connection signal="enemy_touched" from="Ball" to="." method="_on_Ball_enemy_touched" binds= [ "enemy_name" ]]
[connection signal="ball_exited" from="Walls" to="." method="_on_Walls_ball_exited"]
[connection signal="body_entered" from="Walls/OutOfBoundsWall" to="Walls/OutOfBoundsWall" method="_on_OutOfBoundsWall_body_entered"]
[connection signal="body_entered" from="Walls/OutOfBoundsWall" to="Walls" method="_on_OutOfBoundsWall_body_entered"]
